--- a/css/master.css
+++ b/css/master.css
@@ -14,7 +14,9 @@
     left: 0px;
     right: 0px;
     height: 50px;
-    background: #0073C7;
+    /*background: #0073C7*/;
+    background: url('../images/banner.png');
+    background-size: 500px;
     box-shadow: 0px 0px 5px #000;
     z-index: 10;
 }
@@ -40,6 +42,9 @@
     bottom: 0px;
     background: #EFEFEF;
     z-index: 1;
+    font-family: Helvetica, Arial, sans-serif;
+    overflow-y: auto;
+    overflow-x: none;
 }
 
 .body_container {
@@ -49,9 +54,16 @@
     bottom: 0px;
     margin-left: -450px;
     left: 50%;
-    overflow-y: auto;
-    overflow-x: none;
     z-index: 2;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.outer-text {
+    color: #888;
+    text-shadow: 0px 1px 0px white;
+}
+
+h1, h2, h3 {
+    font-weight: 900;
 }
