--- a/stylesheets/app/master.less
+++ b/stylesheets/app/master.less
@@ -4,7 +4,7 @@
     bottom: 0px;
     top: 0px;
     width: 200px;
-    background: url('../images/brand.png');
+    background: url('../../../images/brand.png');
     background-size: 200px 50px;
 }
 
@@ -15,7 +15,7 @@
     right: 0px;
     height: 50px;
     /*background: #0073C7*/;
-    background: url('../images/banner.png');
+    background: url('../../../images/banner.png');
     background-size: 500px;
     box-shadow: 0px 0px 5px #000;
     z-index: 10;
