Update the UI with SendGrid branding

--- a/stylesheets/app/master.less
+++ b/stylesheets/app/master.less
@@ -3,9 +3,9 @@
     left: 0px;
     bottom: 0px;
     top: 0px;
-    width: 200px;
-    background: url('../../../images/brand.png');
-    background-size: 200px 50px;
+    width: 180px;
+    background: url('../../../images/sendgrid-logo.svg') no-repeat center;
+    background-size: 180px 35px;
 }
 
 .nav {
@@ -14,11 +14,9 @@
     left: 0px;
     right: 0px;
     height: 50px;
-    /*background: #0073C7*/;
-    background: url('../../../images/banner.png');
+    background: #2f3847;
     background-size: 500px;
-    box-shadow: 0px 0px 5px #000;
-    z-index: 10;
+    z-index: 1;
 }
 
 .nav_container {
@@ -41,7 +39,8 @@
     right: 0px;
     bottom: 0px;
     background: #EFEFEF;
-    z-index: 1;
+    z-index: 10;
+    box-shadow: 0px 0px 5px #000;
     font-family: Helvetica, Arial, sans-serif;
     overflow-y: auto;
     overflow-x: none;
@@ -89,4 +88,14 @@ h1, h2, h3 {
 .form-field {
     width: 500px !important;
     margin-right: 10px !important;
+}
+
+.panel-heading {
+    background: #2f3847 !important;
+    border-color: #2f3847 !important;
+    color: white !important;
+}
+
+.panel-info {
+    border-color: #2f3847 !important;
 }
