More styling updates

--- a/stylesheets/app/master.less
+++ b/stylesheets/app/master.less
@@ -1,3 +1,7 @@
+body, html {
+    background: #2f3847 !important;
+}
+
 .brand {
     position: absolute;
     left: 0px;
@@ -33,6 +37,8 @@
 }
 
 .body {
+    border-top-left-radius:5px;
+    border-top-right-radius:5px;
     position: absolute;
     top: 50px;
     left: 0px;
@@ -43,7 +49,7 @@
     box-shadow: 0px 0px 5px #000;
     font-family: Helvetica, Arial, sans-serif;
     overflow-y: auto;
-    overflow-x: none;
+    overflow-x: hidden;
 }
 
 .body_container {
