--- a/javascripts/views/dashboard.hbs
+++ b/javascripts/views/dashboard.hbs
@@ -3,7 +3,7 @@
 <div class="panel panel-default" style="margin-top: 25px">
     <div class="panel-body">
         <h1 style="margin-top: 0px">Search</h1>
-        <p>Your query below will check every field in the database (to, from, etc.):</p>
+        <p>Your query below will check every field in the database (to, from, etc.). You can also specify specific fields by going to the {{#link-to 'detailedSearch'}}Detailed Search{{/link-to}} page.</p>
         {{input type="text" value=query action="search" class="form-control"}}
     </div>
 </div>
