Fix DB queries for especially large databases.

--- a/javascripts/views/event.hbs
+++ b/javascripts/views/event.hbs
@@ -16,7 +16,7 @@
                 <div class="panel-heading">
                     Event Information
                 </div>
-                <div class="panel-body" id="event-info-body">
+                <div class="panel-body" id="event-info-body" style="overflow:hidden">
                     {{#if timestamp}}
                         <p><b>Time:</b></p>
                         <ul><li>{{format-date timestamp}}</li></ul>
