Update the styling on the setup page.

--- a/stylesheets/app/master.less
+++ b/stylesheets/app/master.less
@@ -102,6 +102,6 @@ h1, h2, h3 {
     color: white !important;
 }
 
-.panel-info {
+.panel-info, .panel-primary {
     border-color: #2f3847 !important;
 }
