Fixed related events not showing up

--- a/javascripts/views/dashboard.hbs
+++ b/javascripts/views/dashboard.hbs
@@ -40,7 +40,7 @@
         <td style="width: 415px; vertical-align: top;">
             <div class="panel panel-info" style="margin-top: 25px">
                 <div class="panel-heading">
-                    Total Events Today
+                    Total Events In Past 24 Hours
                 </div>
                 <div class="panel-body" style="overflow-y: auto; height: 275px;">
                     <span style="text-align: center">
