--- a/javascripts/views/detailed_search.hbs
+++ b/javascripts/views/detailed_search.hbs
@@ -1,6 +1,6 @@
 <div class="panel panel-default" style="margin-top: 25px">
     <div class="panel-body">
-        <h1 style="margin:0px;">Narrow Your Search</h1>
+        <h1 style="margin:0px;">Detailed Search</h1>
         <p style="margin-top: 0px;">Add filters below to narrow down your search:</p>
         <form id="detailedSearchParams" class="form-inline" role="form" style="margin-bottom: 15px" {{action "submitSearch" on="submit"}}>
             {{#each this}}
