--- a/stylesheets/app/master.less
+++ b/stylesheets/app/master.less
@@ -1,10 +1,11 @@
+@brand_height: 35px;
+@brand_width: (290.238px / 73.646px) * @brand_height;
+
 body, html {
     background: #2f3847 !important;
 }
 
 .brand {
-    @brand_height: 35px;
-    @brand_width: (290.238px / 73.646px) * @brand_height;
     position: absolute;
     left:15px;
     bottom: 0px;
@@ -33,6 +34,32 @@ body, html {
     margin-left: -450px;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.nav_links {
+    position: absolute;
+    left: @brand_width + 20;
+    height: 100%;
+
+    li {
+        display: inline;
+        list-style-type: none;
+        cursor: pointer;
+        height: 100%;
+        padding: 25px;
+
+        a {
+            line-height: 1.5em;
+            color: #EFEFEF;
+            text-decoration: none;
+            line-height: 3.5em !important;
+            font-weight: bold;
+        }
+    }
+
+    li.active {
+        background: rgba(0,0,0,0.3);
+    }
 }
 
 .search {
