--- a/javascripts/views/settings.hbs
+++ b/javascripts/views/settings.hbs
@@ -1,11 +1,15 @@
-<h1>Settings</h1>
+<div class="panel panel-default" style="margin-top: 25px">
+    <div class="panel-body">
+        <h1 style="margin-top:0px;">Settings</h1>
 
-<p>Auto delete events that are older than 
-    {{view Ember.Select
-       content=model.autoDeleteValues
-       optionValuePath="content.value"
-       optionLabelPath="content.title"
-       value=model.selectedAutoDeleteValue}}
-    old.
-</p>
-<p style="text-align:right;"><button {{action "save"}} class="btn btn-default">Save</button></p>
+        <p>Auto delete events that are older than 
+            {{view Ember.Select
+               content=model.autoDeleteValues
+               optionValuePath="content.value"
+               optionLabelPath="content.title"
+               value=model.selectedAutoDeleteValue}}
+            old.
+        </p>
+        <p style="text-align:right;"><button {{action "save"}} class="btn btn-primary">Save</button></p>
+    </div>
+</div>
